<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="@dimen/iten_height"
        android:background="@color/text_color_black"
        android:gravity="center"
        android:text="@string/new_dir"
        android:textColor="@color/white"
        android:textSize="@dimen/common_text_size"/>

    <EditText
        android:id="@+id/dir_name"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="@dimen/iten_height"
        android:layout_margin="@dimen/padding_five"
        android:background="@drawable/new_dir_input_shape"
        android:padding="@dimen/padding_five"/>

    <LinearLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="@dimen/iten_height"
        android:background="@color/gray"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_five"
            android:layout_weight="1"
            android:background="@color/lightgray"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_five"
            android:layout_weight="1"
            android:background="@color/lightgray"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>