<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context="com.openthos.fileselector.MainActivity">

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iten_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/CommonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textColor="@color/text_color_gray"/>

        <EditText
            android:id="@+id/file_name"
            style="@style/CommonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_five"
            android:background="@drawable/edit_bg_shape"
            android:textColor="@color/text_color_gray"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_one"
                android:background="@color/line"/>

            <ListView
                android:id="@+id/device_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <View
            android:layout_width="@dimen/padding_one"
            android:layout_height="match_parent"
            android:background="@color/line"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/iten_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/select_path"
                    style="@style/CommonTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/padding_five"
                    android:layout_weight="1"
                    android:background="@drawable/edit_bg_shape"
                    android:ellipsize="start"
                    android:textColor="@color/text_color_gray"
                    />

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/img_size"
                    android:layout_height="@dimen/img_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/padding_ten"
                    android:layout_marginRight="@dimen/padding_ten"
                    android:src="@mipmap/back"/>

                <ImageView
                    android:id="@+id/new_file"
                    android:layout_width="@dimen/img_size"
                    android:layout_height="@dimen/img_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/padding_ten"
                    android:src="@mipmap/new_dir"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_one"
                android:background="@color/line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/iten_height"
                android:orientation="horizontal">


                <TextView
                    style="@style/CommonTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_five"
                    android:layout_weight="5"
                    android:text="@string/name"
                    android:textColor="@color/text_color_gray"/>

                <TextView
                    style="@style/CommonTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/padding_ten"
                    android:layout_weight="2"
                    android:text="@string/modify"
                    android:textColor="@color/text_color_gray"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_one"
                android:layout_marginLeft="@dimen/padding_five"
                android:layout_marginRight="@dimen/padding_ten"
                android:background="@color/line"/>

            <ListView
                android:id="@+id/file_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_one"
        android:background="@color/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/iten_height"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/cancel"
            style="@style/CommonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_five"
            android:background="@drawable/edit_bg_shape"
            android:text="@string/cancel"
            android:textColor="@color/text_color_gray"/>

        <TextView
            android:id="@+id/save"
            style="@style/CommonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_five"
            android:background="@drawable/edit_bg_shape"
            android:text="@string/save"
            android:textColor="@color/text_color_gray"/>
    </LinearLayout>
</LinearLayout>
